--- a/pc.html
+++ b/pc.html
@@ -132,7 +132,7 @@
         <h1 class="about-me-pc-padding content-h1">Мои проекты</h1>
         <div class="projects-div">
           <div style="text-align: right">
-            <img src="./src/pc_index/letsgo.png" class="projects-img" alt="img" />
+            <img src="./src/pc_index/letsgo.png" class="projects-img right" alt="img" />
           </div>
           <div
             style="
@@ -147,10 +147,11 @@
             "
           ></div>
         </div>
-        <h1 class="content-h1" style="padding-top: 2.5rem">Googlex</h1>
+        <h1 class="content-h1 special">Googlex</h1>
+        <p>Подробнее</p>
         <div class="projects-div">
           <div>
-            <img src="./src/pc_index/linez-by.png" class="projects-img" alt="img" />
+            <img src="./src/pc_index/linez-by.png" class="projects-img left" alt="img" />
           </div>
           <div
             style="
@@ -165,13 +166,14 @@
             "
           ></div>
         </div>
-        <h1 class="content-h1" style="padding-top: 2.5rem">Линия Здоровья</h1>
+        <h1 class="content-h1 special">Линия Здоровья</h1>
+        <p>Подробнее</p>
       </div>
       <div class="my-projects">
         <h1 class="about-me-pc-padding content-h1">Мой стек</h1>
         <div class="lang-div">
-          <div style="width: clamp(10rem, 80vw, 30rem); height: clamp(10rem, 80vw, 30rem); background: #ed7550">
-            <h1 class="content-h1" style="position: absolute; bottom: -2rem">JavaScript</h1>
+          <div class="lang-box">
+            <h1 class="content-h1 special" style="position: absolute; bottom: -2rem">JavaScript</h1>
             <p class="projects-text pc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -190,8 +192,8 @@
           pariatur.
         </p>
         <div class="lang-div">
-          <div style="width: clamp(10rem, 80vw, 30rem); height: clamp(10rem, 80vw, 30rem); background: #ed7550">
-            <h1 class="content-h1" style="position: absolute; bottom: -2rem">JavaScript</h1>
+          <div class="lang-box">
+            <h1 class="content-h1 special" style="position: absolute; bottom: -2rem">JavaScript</h1>
             <p class="projects-text pc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -210,8 +212,8 @@
           pariatur.
         </p>
         <div class="lang-div">
-          <div style="width: clamp(10rem, 80vw, 30rem); height: clamp(10rem, 80vw, 30rem); background: #ed7550">
-            <h1 class="content-h1" style="position: absolute; bottom: -2rem">JavaScript</h1>
+          <div class="lang-box">
+            <h1 class="content-h1 special" style="position: absolute; bottom: -2rem">JavaScript</h1>
             <p class="projects-text pc">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
