non-focus text added & html code formatting

--- a/pc.html
+++ b/pc.html
@@ -113,9 +113,9 @@
           </div>
         </div>
         <div class="col">
-          <div>
+          <div class="html-code">
             <h2>_index.html</h2>
-            <p class="code">
+            <p class="html-code">
               &lt;!DOCTYPE html><br />
               &lt;html lang="en"><br />
               &lt;head><br />
@@ -123,33 +123,32 @@
               &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"> &lt;meta name="viewport"
               content="width=device-width, initial-scale=1.0" ><br />
             </p>
-            <h2>&lt;title> Arsenij Kotikov &lt;/title></h2>
-            <p>
+            <h2>
+              <span class="non-focus"> &lt;title></span> Arsenij Kotikov <span class="non-focus"> &lt;/title></span>
+            </h2>
+            <p class="html-code">
               <br />
               &lt;/head> <br />&lt;body><br />
             </p>
             <h2>
-              &lt;h1> Веб-разрабочик &lt;/h1><br />
+              <span class="non-focus"> &lt;h1></span> Веб-разрабочик <span class="non-focus"> &lt;/h1></span><br />
 
-              &lt;h2> Starting from 2020 &lt;/h2>
+              <span class="non-focus"> &lt;h2> </span> Starting from 2020 <span class="non-focus"> &lt;/h2></span>
             </h2>
-            <p>
+            <p class="code">
               <br />&lt;img src=”./cat.webp”> <br />&lt;/body><br />
               &lt;/html>
             </p>
-            <div class="d-flex w-100">
-              <div class="col" style="border-left: 0.5rem solid white">
-                <div style="padding-left: 1rem">
-                  <h2>__script.js</h2>
-                  <p class="code">
-                    console.log(“meow!”);<br />
-                    alert(“мяу”);
-                  </p>
-                </div>
+          </div>
+          <div class="d-flex w-100">
+            <div class="col" style="border-left: 0.5rem solid white">
+              <div style="padding-left: 1rem">
+                <h2>__script.js</h2>
+                <p class="html-code">alert(“мяу”);</p>
               </div>
-              <div class="col" style="border-left: 0.5rem solid white">
-                <div style="padding-left: 1rem"><h1>СТЕК</h1></div>
-              </div>
+            </div>
+            <div class="col" style="border-left: 0.5rem solid white">
+              <div style="padding-left: 1rem"><h1>СТЕК</h1></div>
             </div>
           </div>
         </div>
