--- a/pc.html
+++ b/pc.html
@@ -154,121 +154,133 @@
         </div>
       </div>
     </div>
-    <div class="my-projects" style="overflow: hidden">
-      <h1 class="content-h1" style="padding-top: 5rem">Мой<br />стек</h1>
-      <div>
-        <section id="solar-system">
-          <div id="sun"></div>
-          <article id="mercury-trajectory">
-            <div id="mercury"><i class="bx bxl-javascript"></i></div>
-          </article>
-          <article id="venus-trajectory">
-            <div id="venus"><i class="bx bxl-javascript"></i></div>
-          </article>
-          <article id="earth-trajectory">
-            <div id="earth"><i class="bx bxl-javascript"></i></div>
-          </article>
-          <article id="mars-trajectory">
-            <div id="mars"><i class="bx bxl-javascript"></i></div>
-          </article>
-          <article id="main-asteroid-belt-trajectory"></article>
-          <article id="jupiter-trajectory"></article>
-          <article id="saturn-trajectory"></article>
-          <article id="uranus-trajectory"></article>
-          <article id="neptune-trajectory"></article>
-        </section>
-      </div>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card">
-            <h1><i class="bx bxl-javascript"></i>JS</h1>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural lead-in to additional content. This
-                content is a little bit longer.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <h1><i class="bx bxl-html5"></i>HTML</h1>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural lead-in to additional content. This
-                content is a little bit longer.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <h1><i class="bx bxl-css3"></i>CSS</h1>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural lead-in to additional content.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="my-projects">
-      <h1 class="about-me-pc-padding content-h1">Мои проекты</h1>
-      <div class="projects-div" style="overflow: hidden">
-        <div style="text-align: right">
-          <img src="./src/pc_index/letsgo.png" class="projects-img right" alt="img" />
-        </div>
-        <div
-          style="
-            position: absolute;
-            left: 0;
-            top: 0;
-            z-index: -1;
-            min-height: 100%;
-            width: 15rem;
-            top: 2rem;
-            background: linear-gradient(180deg, #da88dc 0%, rgba(218, 136, 220, 0) 137.44%);
-          "
-        ></div>
-      </div>
-      <h1 class="content-h1 special">Googlex</h1>
-      <div class="content">
-        <p style="padding-top: 3rem">Подробнее | UI-клон Google, но с константным поиском</p>
-      </div>
-      <div class="projects-div">
+    <div class="content">
+      <div class="my-projects" style="overflow: hidden">
+        <h1 class="content-h1" style="padding-top: 5rem">Мой<br />стек</h1>
         <div>
-          <img src="./src/pc_index/linez-by.png" class="projects-img left" alt="img" />
+          <section id="solar-system">
+            <div id="sun"></div>
+            <article id="mercury-trajectory">
+              <div id="mercury"><i class="bx bxl-javascript"></i></div>
+            </article>
+            <article id="venus-trajectory">
+              <div id="venus"><i class="bx bxl-javascript"></i></div>
+            </article>
+            <article id="earth-trajectory">
+              <div id="earth"><i class="bx bxl-javascript"></i></div>
+            </article>
+            <article id="mars-trajectory">
+              <div id="mars"><i class="bx bxl-javascript"></i></div>
+            </article>
+            <article id="main-asteroid-belt-trajectory"></article>
+            <article id="jupiter-trajectory"></article>
+            <article id="saturn-trajectory"></article>
+            <article id="uranus-trajectory"></article>
+            <article id="neptune-trajectory"></article>
+          </section>
         </div>
-        <div
-          style="
-            position: absolute;
-            right: 0;
-            top: 0;
-            z-index: -1;
-            min-height: 100%;
-            width: 15rem;
-            top: 2rem;
-            background: linear-gradient(180deg, #244896 0%, rgba(36, 72, 150, 0) 123%);
-          "
-        ></div>
-      </div>
-      <h1 class="content-h1 special">Линия Здоровья</h1>
-      <div class="content">
-        <p style="padding-top: 3rem">Подробнее | Сайт медицинского центра</p>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card">
+              <h1><i class="bx bxl-javascript"></i>JS</h1>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural lead-in to additional content. This
+                  content is a little bit longer.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h1><i class="bx bxl-html5"></i>HTML</h1>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural lead-in to additional content. This
+                  content is a little bit longer.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <h1><i class="bx bxl-css3"></i>CSS</h1>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural lead-in to additional content.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="footer">
-      <h1 class="footer-h1 content-h1" style="text-align: left">
-        На<br class="mobile" />
-        этом<br class="mobile" />
-        пока<br class="mobile" />
-        всё<br class="mobile" />
-      </h1>
-    </div>
+    <div class="content">
+      <div class="my-projects">
+        <h1 class="about-me-pc-padding content-h1">Мои проекты</h1>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./src/pc_index/linez-by.png" class="d-block w-100" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./src/pc_index/letsgo.png" class="d-block w-100" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <div class="footer">
+        <h1 class="footer-h1 content-h1" style="text-align: left">
+          На<br class="mobile" />
+          этом<br class="mobile" />
+          пока<br class="mobile" />
+          всё<br class="mobile" />
+        </h1>
+
   </body>
 </html>
