--- a/pc.html
+++ b/pc.html
@@ -154,8 +154,9 @@
         </div>
       </div>
     </div>
-    <div class="content">
-      <div class="my-projects" style="overflow: hidden">
+
+    <div class="my-projects" style="overflow: hidden">
+      <div class="content">
         <h1 class="content-h1" style="padding-top: 5rem">Мой<br />стек</h1>
         <div>
           <section id="solar-system">
@@ -217,7 +218,51 @@
           </div>
         </div>
       </div>
+      <div class="todo">
+        <div class="content">
+          <h1 class="content-h1" style="padding-top: 5rem">TODO</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <h1><i class="bx bxl-c-plus-plus"></i>C++</h1>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a natural lead-in to additional content. This
+                    content is a little bit longer.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <h1><i class="bx bxl-google"></i>GO</h1>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a natural lead-in to additional content. This
+                    content is a little bit longer.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content" style="position: relative">
+        <h1 class="content-h1" style="padding-top: 5rem">Source code</h1>
+        <div class="card">
+          <h1><i class="bx bx-code"></i>Ага,</h1>
+          <div class="card-body">
+            <p class="card-text">
+              Этот сайт имеет открытый исходный код. Хочешь его посмотреть? Кликни по кнопочке ниже.
+            </p>
+          </div>
+        </div>
+        <img src="./src/pc_index/pingv.svg" alt="pingv" class="pingv" />
+      </div>
     </div>
+
     <div class="content">
       <div class="my-projects">
         <h1 class="about-me-pc-padding content-h1">Мои проекты</h1>
@@ -281,6 +326,7 @@
           пока<br class="mobile" />
           всё<br class="mobile" />
         </h1>
-
+      </div>
+    </div>
   </body>
 </html>
