--- a/pc.html
+++ b/pc.html
@@ -249,6 +249,33 @@
           </div>
         </div>
       </div>
+      <div class="content">
+        <div class="container">
+          <img
+            id="GH-img1"
+            src="https://github-readme-activity-graph.cyclic.app/graph?username=kotru21&color=ffffff&point=ffffff&area_color=ffffff&line=CC0B1A&hide_border=true&area=true&bg_color=false"
+            style="width: 100%"
+          />
+          <div class="row">
+            <div class="col-sm">
+              <img
+                id="GH-img3"
+                class="gh-hover img-responsive"
+                style="width: 100%"
+                src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&bg_color=0C0E12&border_color=CC0B1A&title_color=CC0B1A&area=true&layout=compact&text_color=F7F8FA&locale=ru"
+              />
+            </div>
+            <div class="col-sm">
+              <img
+                id="GH-img3"
+                class="gh-hover img-responsive"
+                style="width: 100%"
+                src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&background=0C0E12&border=CC0B1A&area=true&sideLabels=F7F8FA&dates=F7F8FA&currStreakNum=F7F8FA&currStreakLabel=F7F8FA&locale=ru"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="content" style="position: relative">
         <h1 class="content-h1" style="padding-top: 5rem">Source code</h1>
         <div class="card">
